chore: Add "by INFINITION" to the platform description.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="absolute bottom-8 text-gray-500 text-sm font-mono">
-            v2.0 • Interactive Learning Platform
+            v2.0 • Interactive Learning Platform by INFINITION
         </div>
     </div>
 
