--- a/index.html
+++ b/index.html
@@ -50,14 +50,9 @@
         <!-- Course Selector -->
         <div class="p-4 border-b border-indigo-700 bg-indigo-800/50 shrink-0">
             <label class="text-xs text-indigo-300 uppercase font-bold tracking-wider">Matière</label>
-            <select id="courseSelector" onchange="switchCourse(this.value)"
-                class="w-full mt-2 bg-indigo-700 border-none rounded text-white p-2 focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer font-bold text-sm">
-                <option value="bases">🏛️ Bases Mathématiques</option>
-                <option value="analysis">📉 Analyse & Calcul</option>
-                <option value="algebra">📐 Algèbre Linéaire</option>
-                <option value="stats">📊 Stats & Proba</option>
-                <option value="quantum">⚛️ Physique Quantique</option>
-            </select>
+            <div id="courseSelectorWrapper" class="relative z-50">
+                <!-- Custom Selector injected by JS -->
+            </div>
         </div>
 
         <div class="flex-1 overflow-y-auto p-2 space-y-1" id="nav-container">
